# yandex-direct-metrica-mcp

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: README-setup-2026-01-14.md  accounts-registry-2026-01-27.md  api-application-description-2026-01-15.md  claude-code-setup-2026-01-27.md  claude-desktop-docker-mcp-setup-2026-01-20.md  dashboard-generator-option1-2026-01-21.md  dashboard-option1.md  data-normalization-2026-01-14.md  direct-management-recipes-2026-01-17.md  direct-metrica-analytics-data-requirements-2026-01-20.md  direct-services-summary-2026-01-14.md  field-mapping-checklist-2026-01-14.md  human-friendly-tools-2026-01-17.md  human-friendly-tools-catalog-2026-01-17.md  index.html  launch-checklist-claude-code-multi-dashboard-2026-01-29.md  metrics-glossary-2026-01-14.md  public-vs-pro.md  publishing-docker-2026-01-29.md  quickstart.md  report-presets-2026-01-14.md  research-2026-01-14.md  research-altrr2-yandex-tools-mcp-2026-01-17.md  research-summary-2026-01-14.md  roadmap-2026-01-14.md  shortlist-2026-01-14.md  tapi-yandex-direct-services-2026-01-14.md  tool-coverage-2026-01-27.md  tools-missing-direct-2026-01-14.md  tools-missing-metrica-2026-01-14.md  tools-proposal-2026-01-14.md  tools-proposal-2026-01-20.md  usage-examples-2026-01-14.md  usage-examples-2026-01-16.md  validation-checklist-2026-01-14.md
examples/: claude-code-prompts.md
scripts/: check_direct_access.py  check_metrica_access.py  exchange_code.py  generate_dashboard_option1.py  smoke_test.py  (+11 more)
(+47 files in other folders)
